--- a/index.html
+++ b/index.html
@@ -1,200 +1,92 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>ARCHIGENIE - Home</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>ARCHIGENIE – Layout Generator</title>
   <style>
     body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      height: 100vh;
-      background: #f4f4f4;
+      font-family: 'Segoe UI', sans-serif;
+      background-color: #f4f4f9;
+      color: #333;
+      text-align: center;
+      padding: 40px;
     }
-
-    header {
-      background-color: #1a1a1a;
-      padding: 15px 20px;
-      color: white;
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
+    h1 {
+      color: #2c3e50;
     }
-
-    .navbar {
-      display: flex;
-      gap: 20px;
-    }
-
-    .navbar a {
-      color: white;
-      text-decoration: none;
-      font-weight: bold;
-    }
-
-    .navbar a:hover {
-      text-decoration: underline;
-    }
-
-    .container {
-      display: flex;
-      height: calc(100vh - 140px); /* Adjust for header + footer */
-    }
-
-    .sidebar {
-      width: 300px;
-      background: #ffffff;
+    .form-section {
+      margin: 20px auto;
       padding: 20px;
-      border-right: 2px solid #ddd;
-      overflow-y: auto;
-    }
-
-    .main {
-      flex: 1;
-      padding: 20px;
-      background: #eef1f6;
-      overflow-y: auto;
-    }
-
-    h2 {
-      font-size: 18px;
-      margin-top: 20px;
-    }
-
-    select, input {
-      width: 100%;
-      padding: 8px;
-      margin: 5px 0 15px;
-    }
-
-    .logo {
-      width: 100%;
-      height: auto;
-      margin-bottom: 20px;
-    }
-
-    .showcase {
       background: white;
-      padding: 20px;
-      border-radius: 8px;
+      border-radius: 12px;
+      max-width: 500px;
       box-shadow: 0 0 10px rgba(0,0,0,0.1);
     }
-
-    footer {
-      background-color: #1a1a1a;
-      color: #ccc;
-      text-align: center;
+    input, select, button {
       padding: 10px;
-      font-size: 14px;
+      margin: 10px;
+      font-size: 1em;
     }
-
-    footer a {
-      color: #ccc;
-      margin: 0 10px;
-      text-decoration: none;
+    .preview-box {
+      margin-top: 30px;
+      padding: 20px;
+      background: #fff;
+      border: 2px dashed #aaa;
+      border-radius: 10px;
+      max-width: 600px;
+      margin-left: auto;
+      margin-right: auto;
     }
-
-    footer a:hover {
-      text-decoration: underline;
+    img {
+      max-width: 100%;
+      height: auto;
     }
-
+    footer {
+      margin-top: 60px;
+      color: #888;
+      font-size: 0.9em;
+    }
   </style>
 </head>
 <body>
-
-<header>
-  <div style="font-size: 20px; font-weight: bold;">ARCHIGENIE</div>
-  <nav class="navbar">
-    <a href="#">Home</a>
-    <a href="#">Generate House Layout Plan</a>
-    <a href="#">Generate Lighting Layout Plan</a>
-    <a href="#">Marketplace</a>
-    <a href="#">Subscription</a>
-    <a href="#">Account</a>
-  </nav>
-</header>
-
-<div class="container">
-
-  <div class="sidebar">
-    <img src="C:/archigenie graphics/archigenie logo.png" alt="ARCHIGENIE Logo" class="logo" />
-
-    <h2>Country</h2>
-    <select>
-      <option>United States</option>
-      <option>France</option>
-      <option>India</option>
-      <option>Japan</option>
-    </select>
-
-    <h2>Plan Type</h2>
-    <select>
-      <option>Single Family</option>
-      <option>Multi Family</option>
-      <option>Garage</option>
-      <option>Recreation</option>
-    </select>
-
-    <h2>Area (m²)</h2>
-    <input type="text" placeholder="Min">
-    <input type="text" placeholder="Max">
-
-    <h2>Bedrooms</h2>
-    <select><option>1</option><option>2</option><option>3</option><option>4</option><option>5</option><option>6+</option></select>
-
-    <h2>Bathrooms</h2>
-    <select><option>1</option><option>1.5</option><option>2</option><option>2.5</option><option>3</option><option>4+</option></select>
-
-    <h2>Stories</h2>
-    <select><option>1</option><option>1.5</option><option>2</option><option>2.5</option><option>3+</option></select>
-
-    <h2>Architectural Style</h2>
-    <select>
-      <option>Modern</option>
-      <option>Traditional</option>
-      <option>Craftsman</option>
-      <option>Colonial</option>
-      <option>Victorian</option>
-      <option>French Country</option>
-    </select>
+  <h1>ARCHIGENIE – House Layout Generator</h1>
+  <div class="form-section">
+    <label for="width">Room Width (m):</label>
+    <input type="number" id="width" value="10" />
+    <br/>
+    <label for="height">Room Height (m):</label>
+    <input type="number" id="height" value="12" />
+    <br/>
+    <button id="generate-btn">Generate Layout Plan</button>
   </div>
 
-  <div class="main">
-    <div class="showcase">
-      <h2>🏡 Welcome to ARCHIGENIE</h2>
-      <p>Use the filters to your left to start generating your dream layout.</p>
-      <img src="C:/archigenie graphics/archigenie logo.png" alt="ARCHIGENIE Logo" class="logo" />
-    </div>
-
-    <div style="display: flex; flex-direction: row; gap: 20px; margin-top: 20px;">
-      
-      <!-- Generation Window -->
-      <div style="flex: 1; border: 2px dashed #ccc; padding: 20px; position: relative;">
-        <h2 style="text-align: center;">Generation Preview</h2>
-        <div style="height: 300px; background-color: #f0f0f0; text-align: center; line-height: 300px; color: #999;">
-          Generated plan will appear here...
-        </div>
-      </div>
-
-      <!-- Showcase Window -->
-      <div style="flex: 1; border: 2px dashed #ccc; padding: 20px;">
-        <h2 style="text-align: center;">🏛️ Showcase Gallery</h2>
-        <div style="display: flex; flex-wrap: wrap; gap: 10px; justify-content: center;">
-          <!-- Add your real image previews later -->
-          <!-- <img src="https://..." width="140" style="border-radius: 8px;"> -->
-        </div>
-      </div>
-
-    </div>
+  <div class="preview-box" id="preview">
+    🔮 The floor plan shall appear here when summoned...
   </div>
 
-</div>
+  <footer>
+    Created by Quantum Wizard & Strawberry 🍓 | ARCHIGENIE Mockup Phase 1
+  </footer>
 
-<footer>
-  <a href="#">About</a> |
-  <a href="#">Privacy</a> |
-  <a href="#">Contact</a> |
-  <a href="#">Terms</a>
-</footer>
+  <script>
+    document.getElementById("generate-btn").addEventListener("click", async () => {
+      const width = document.getElementById("width").value;
+      const height = document.getElementById("height").value;
+      const preview = document.getElementById("preview");
+      preview.innerHTML = "✨ Generating your divine layout...";
 
+      try {
+        const response = await fetch(`https://archigenie-mockup-trial.onrender.com/generate?width=${width}&height=${height}`);
+        const blob = await response.blob();
+        const imgURL = URL.createObjectURL(blob);
+        preview.innerHTML = `<img src="${imgURL}" alt="Generated Floor Plan">`;
+      } catch (error) {
+        preview.innerHTML = "❌ Failed to fetch layout.";
+        console.error("Generation error:", error);
+      }
+    });
+  </script>
 </body>
 </html>
